--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <head>
+<meta name="baidu-site-verification" content="jErb4ecB70" />
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
+<meta name ="keywords" content="西南科技大学马新,马新西南科技大学,理学院马新,马新理学院,灰色模型,机器学习马新,马新机器学习,西南石油大学马新,马新西南石油大学">
 <title>马新 西南科技大学--Xin Ma SWUST</title><link href='https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
 body { margin: 0px; padding: 0px; height: auto; bottom: 0px; top: 0px; left: 0px; right: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; tab-size: 4; }
