--- a/gmonline/about.html
+++ b/gmonline/about.html
@@ -23,37 +23,30 @@
 							 <a href="model_select.html">模型选择</a>
 						</li>
 						<li>
-							 <a href="about.html">关于灰色系统</a>
+							 <a href="#">关于灰色系统</a>
 						</li>
 					</ul>
 				</div>
 				
 			</nav>
 			<h1 class="text-center">
-				欢迎来到灰色预测在线计算平台
+				灰色系统
 			</h1>
-			<h2 class="text-center">
-				Welcome to Grey Prediction System Online Computing Platform
-			</h2>
 		</div>
 	</div>
 	<div class="row clearfix">
 		<div class="col-md-12 column">
 			<div class="jumbotron">
-				
-				<p>欢迎来到灰色预测在线计算平台，你可以在本平台选择一个模型去拟合你现有的数据并做出预测。现在本平台只实现了基本的GM(1,1)模型和一些基于数值积分算法优化的GM(1,1)模型。我们将上线更多典型的灰色预测模型。敬请期待！
+				<p>	华中科技大学控制科学与工程系教授，博士生导师邓聚龙于1982年提出的。它是用来解决信息不完备系统的数学方法，它把控制论的观点和方法延伸到复杂的大系统中，将自动控制与运筹学的数学方法相结合，用独树一帜的方法和手段，研究了广泛存在于客观世界中具有灰色性的问题。在短短的时间里，灰色系统理论有了飞速的发展，它的应用已渗透到自然科学和社会经济等许多领域，显示出这门学科的强大生命力，具有广阔的发展前景。
 				</p>
-				<p>
-					<small>This is a online computing platform of Grey Prediction System. You can choose a Model to simulate your own data and make prediction with the model you chosen.
-					Now this online platform only implemented the basic GM(1,1) model and some optimized GM(1,1) models with the numerical integration algorithms. We'll implement more typical Grey System model in the future!</small>
+				<p>系统分析的经典方法是将系统的行为看做是随机变化的过程，用概率统计方法，从大量历史数据中寻找统计规律，这对于统计数据量较大情况下的处理较为有效，但对于数据量少的贫信息系统的分析则较为棘手
 				</p>
-				<p>
-					 <a class="btn btn-primary btn-large" href="model_select.html">Select A Model</a>
+				<p>	灰色系统理论研究的是贫信息建模，它提供了贫信息情况下解决系统问题的新途径。它把一切随机过程看做是在一定范围内变化的、与时间有关的灰色过程，对灰色量不是从寻找统计规律的角度，通过大样本进行研究，而是用数据生成的方法，将杂乱无章的原始数据整理成规律性较强的生成数列后再作研究。灰色理论认为系统的行为现象尽管是朦胧的，数据是杂乱无章的，但它毕竟是有序的，有整体功能的，在杂乱无章的数据后面，必然潜藏着某种规律，灰数的生成是从杂乱无章的原始数据中去开拓、发现、寻找这种内在规律。
 				</p>
 			</div>
 		</div>
 	</div>
-	<!-- footer div-->
+		<!-- footer div-->
 	<div class="row clearfix"> 
 		<div class="col-md-2 column">
 		</div>
