data table updated

--- a/gmonline/gmct.html
+++ b/gmonline/gmct.html
@@ -6,7 +6,7 @@
    <title>GM复化梯形</title>
    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link  rel="stylesheet" type="text/css" href="css/jquery.jqplot.min.css" />
-	<link  rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
+	<link  rel="stylesheet" type="text/css" href="css/datatable.css" />
 	<script src="js/lib/jquery-3.2.1.js"></script>
 </head>
 <body>
@@ -149,7 +149,7 @@
 	<script src="js/lib/jqplot.canvasTextRenderer.js"></script>
 	<script src="js/lib/jqplot.canvasAxisLabelRenderer.js"></script>
 	<script src="js/lib/jqplot.canvasAxisTickRenderer.js"></script>
-	<script src="http://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+	<script src="js/jquery.dataTables.min.js"></script>
 	<script src="js/lib/jqplot.cursor.js"></script>
     <script src="js/lib/jqplot.highlighter.js"></script>
     <script src="js/test.js" ></script>
