--- a/index.html
+++ b/index.html
@@ -2112,8 +2112,8 @@
                 </p>
             </div>
             <script async="" src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-            <p>
-                <span id="busuanzi_container_site_pv" style="display: none;">
+            <p  style="display: none;">
+                <span id="busuanzi_container_site_pv">
                     <span>本站总访问量</span>
                     <span
                         id="busuanzi_value_site_pv">
@@ -2121,7 +2121,6 @@
                         <span>次</span>
                 </span>
             </p>
-            <p>&nbsp;</p>
         </div>
     </div>
 </body>
