--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
                 <br />
                 <strong>Senior Scientist</strong>
                 <br />
-                <span>Lawrence Berkeley National Lab</span>
+                <span>Southwest University of Science and Technology</span>
               </a>
             </div>
           </div>
