--- a/globe/index.html
+++ b/globe/index.html
@@ -928,7 +928,7 @@
                 <br />
                 <strong>Senior Scientist</strong>
                 <br />
-                <span>Lawrence Berkeley National Lab</span>
+                <span>Southwest University of Science and Technology</span>
               </a>
             </div>
           </div>
@@ -936,7 +936,7 @@
         </div>
 
         <div class="group" style="margin-right: 200px;">
-          <h4>Administrator</h4>
+          <h4>ADMINISTRATOR & TECHNOLOGY SUPPORTING</h4>
           <div class="group-container">
             <div class="author">
               <div class="image-placeholder">
