--- a/globe/index.html
+++ b/globe/index.html
@@ -890,7 +890,7 @@
     <div class="padding">
     <!-- <div class="divider"></div> -->
       <section class="authors">
-        <div class="group" style="margin-left: 200px;">
+        <div class="group" style="margin-left: 00px;">
           <h4>Co-Founders</h4>
           <div class="group-container">
             <div class="author">
@@ -936,7 +936,7 @@
         </div>
 
         <div class="group" style="margin-right: 200px;">
-          <h4>ADMINISTRATOR & TECHNOLOGY SUPPORTING</h4>
+          <h4>ADMIN & TECH SUPPORT</h4>
           <div class="group-container">
             <div class="author">
               <div class="image-placeholder">
