updated tool name

--- a/tools/index.html
+++ b/tools/index.html
@@ -24,7 +24,7 @@
 
     <!-- 链接美化 -->
     <div>
-        <a href="./project_fee.html" class="btn btn-primary btn-lg btn-custom">
+        <a href="./managefees.html" class="btn btn-primary btn-lg btn-custom">
             横向科研项目管理费计算器
         </a>
     </div>
