--- a/tools/managefees.html
+++ b/tools/managefees.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>横向科研项目管理费计算器</title>
-    <script src="./cnds/jquery-3.7.1.min.js"></script>
+    <script src="./cdns/jquery-3.7.1.min.js"></script>
     <style>
         .container {
             width: 500px;
