--- a/tools/managefees.html
+++ b/tools/managefees.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>横向科研项目管理费计算器</title>
     <script src="./cdns/jquery-3.7.1.min.js"></script>
     <style>
