--- a/tools/index.html
+++ b/tools/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>实用小助手</title>
     <!-- 引入 Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./cdns/bootstrap.min.css" rel="stylesheet">
     <style>
         .container {
             text-align: left; /* 将容器内文本居左 */
@@ -23,14 +23,19 @@
     <h1 class="display-4 mb-4">常用工具</h1>
 
     <!-- 链接美化 -->
-    <div>
+    <div class="mb-4">
         <a href="./managefees.html" class="btn btn-primary btn-lg btn-custom">
             横向科研项目管理费计算器
+        </a>
+    </div>
+    <div class="mb-4">
+        <a href="./records_stats.html" class="btn btn-primary btn-lg btn-custom">
+            成绩分数段统计
         </a>
     </div>
 </div>
 
 <!-- 引入 Bootstrap JS（可选） -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./cdns/bootstrap.bundle.min.js"></script>
 </body>
 </html>
