--- a/tools/index.html
+++ b/tools/index.html
@@ -29,6 +29,11 @@
         </a>
     </div>
     <div class="mb-4">
+        <a href="./managefees2025.html" class="btn btn-primary btn-lg btn-custom">
+            横向科研项目管理费计算器2025
+        </a>
+    </div>
+    <div class="mb-4">
         <a href="./records_stats.html" class="btn btn-primary btn-lg btn-custom">
             成绩分数段统计
         </a>
